--- a/src/pages/invoiceDetail.css
+++ b/src/pages/invoiceDetail.css
@@ -4,6 +4,7 @@
     padding: 16px;
     background-color: #f5f5f5;
     color: #808080;
+    margin-bottom: 50px;
   }
   .invoicedas {
     background-color:#1C85E8;
