--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -138,7 +138,7 @@
   }
 
   .invoice-status {
-    border: #62a0e2 1px solid;
+    border: #BFD8FF 1px solid;
     border-radius: 8px;
     padding: 4px 12px ;
     font-size: 10px;
